[gd_scene load_steps=6 format=3 uid="uid://bgoj1jm7w0fp1"]

[ext_resource type="Script" uid="uid://dxc54vgwbofcp" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://b8da2vkffdcfh" path="res://player.tscn" id="1_ig7tw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7dm0k"]
size = Vector3(100, 2, 100)

[sub_resource type="BoxMesh" id="BoxMesh_ig7tw"]
size = Vector3(100, 2, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_0xm2m"]
size = Vector3(1, 18, 101)

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
player_scene = ExtResource("1_ig7tw")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_7dm0k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_ig7tw")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 8.5, 0)
shape = SubResource("BoxShape3D_0xm2m")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 8.5, 0)
shape = SubResource("BoxShape3D_0xm2m")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 8.5, 50)
shape = SubResource("BoxShape3D_0xm2m")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 8.5, -50)
shape = SubResource("BoxShape3D_0xm2m")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, -3.55272e-14, 8.74228e-08, 6.68873e-08, 0.64391, 0.765101, -5.62924e-08, 0.765101, -0.64391, 1.90735e-06, 9.3974, -41.8639)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, -30.9202, 25.5802, -24.0904)
shadow_enabled = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -296.0
offset_right = 320.0
offset_bottom = 280.0
grow_vertical = 2
color = Color(0.588235, 0.588235, 0.588235, 0.694118)

[node name="Label" type="Label" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Games:"

[node name="GameList" type="ItemList" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -512.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21, -15)

[connection signal="item_selected" from="Control/ColorRect/GameList" to="." method="_on_game_list_item_selected"]
